<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/jobTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <TextView
            android:id="@+id/textJobType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/please_select_you_job_type"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioJobTypes"
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textJobType"
            app:layout_constraintTop_toBottomOf="@+id/textJobType">

            <RadioButton
                android:id="@+id/selectedWorker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/worker_rough_work"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/selectedClerk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/clerk"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/textWorkerLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_to_4500"
            app:layout_constraintStart_toStartOf="@+id/radioJobTypes"
            app:layout_constraintTop_toBottomOf="@+id/radioJobTypes" />

        <TextView
            android:id="@+id/textClerkLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up_to_2600"
            app:layout_constraintEnd_toEndOf="@+id/radioJobTypes"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toEndOf="@+id/textWorkerLimit"
            app:layout_constraintTop_toBottomOf="@+id/radioJobTypes" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leftLayout"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:background="#8CD9FD"
        app:layout_constraintBottom_toTopOf="@+id/payInformation"
        app:layout_constraintEnd_toStartOf="@+id/rightLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobTypeLayout">


        <TextView
            android:id="@+id/textBasicSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/monthly_basic_salary"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/overtime_1_5"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textBasicSalary"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textBasicSalary"
            app:layout_constraintTop_toBottomOf="@+id/textBasicSalary" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/overtime_2_0"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/other"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/payInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftLayout">

        <TextView
            android:id="@+id/textHourlyBasicRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/hourly_basic_rate"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/payInformation"
            app:layout_constraintTop_toTopOf="@+id/payInformation" />


        <TextView
            android:id="@+id/textOtPay1.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ot_pay_for_1_5"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textHourlyBasicRate"
            app:layout_constraintTop_toBottomOf="@+id/textHourlyBasicRate" />

        <TextView
            android:id="@+id/hourlyBasicRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="0.0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textHourlyBasicRate"
            app:layout_constraintStart_toEndOf="@+id/textHourlyBasicRate"
            app:layout_constraintTop_toTopOf="@+id/textHourlyBasicRate" />

        <TextView
            android:id="@+id/textOtPay2.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/ot_pay_for_2_0"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textOtPay1.5"
            app:layout_constraintTop_toBottomOf="@+id/textOtPay1.5" />

        <TextView
            android:id="@+id/textTotalOtPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_ot_pay"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/textOtPay2.0"
            app:layout_constraintTop_toBottomOf="@+id/textOtPay2.0" />

        <TextView
            android:id="@+id/showOtPay15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="0.0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textOtPay1.5"
            app:layout_constraintStart_toEndOf="@+id/textOtPay1.5"
            app:layout_constraintTop_toTopOf="@+id/textOtPay1.5"
            app:layout_constraintVertical_bias="0.48000002" />

        <TextView
            android:id="@+id/showOtPay20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="0.0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textOtPay2.0"
            app:layout_constraintStart_toEndOf="@+id/textOtPay2.0"
            app:layout_constraintTop_toBottomOf="@+id/textOtPay1.5"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/showOtPayTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="0.0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textTotalOtPay"
            app:layout_constraintStart_toEndOf="@+id/textTotalOtPay"
            app:layout_constraintTop_toTopOf="@+id/textTotalOtPay" />

        <TextView
            android:id="@+id/otPay15hrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/showOtPay15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/showOtPay15"
            app:layout_constraintTop_toTopOf="@+id/showOtPay15" />

        <TextView
            android:id="@+id/otPay20hrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/showOtPay20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/showOtPay20"
            app:layout_constraintTop_toTopOf="@+id/showOtPay20" />

        <TextView
            android:id="@+id/textTotalSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/total_salary"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textTotalOtPay"
            app:layout_constraintTop_toBottomOf="@+id/textTotalOtPay" />

        <TextView
            android:id="@+id/showTotalSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:hint="0.0"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textTotalSalary"
            app:layout_constraintStart_toEndOf="@+id/textTotalSalary"
            app:layout_constraintTop_toTopOf="@+id/textTotalSalary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rightLayout"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:background="@color/light_blue_2"
        app:layout_constraintBottom_toBottomOf="@+id/leftLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leftLayout"
        app:layout_constraintTop_toTopOf="@+id/leftLayout">

        <EditText
            android:id="@+id/inputBasicSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/basic_salary"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputOt15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hours"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputBasicSalary"
            app:layout_constraintStart_toStartOf="@+id/inputBasicSalary"
            app:layout_constraintTop_toBottomOf="@+id/inputBasicSalary" />

        <EditText
            android:id="@+id/inputOt20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ellipsize="none"
            android:ems="10"
            android:hint="@string/hours"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/inputOt15"
            app:layout_constraintStart_toStartOf="@+id/inputOt15"
            app:layout_constraintTop_toBottomOf="@+id/inputOt15" />

        <EditText
            android:id="@+id/inputOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/bonus_allowance"
            android:inputType="numberDecimal"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/inputOt20"
            app:layout_constraintStart_toStartOf="@+id/inputOt20"
            app:layout_constraintTop_toBottomOf="@+id/inputOt20" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:backgroundTint="#752AFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payInformation" />

    <TextView
        android:id="@+id/mom_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/mom_hyperlink"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textPercentageError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/calculation_will_have_some_percentage_error"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/mom_website"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="6dp"
        android:text="@string/version"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>